--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
-                                                Github<br />
-                                                Pages
+                                                Akhilraj<br />
+                                                INFORMATION TECHNOLOGY
                                             </h1>
                                             <p>
-                                                Hosting your first GitHub web
-                                                page
+                                               a handskme boy with a cute girlfriwnd
+                             
                                             </p>
                                         </div>
                                     </div>
