--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                                 INFORMATION TECHNOLOGY
                                             </h1>
                                             <p>
-                                               a handskme boy with a cute girlfriwnd
+                                                A Tech Enthusiast!!
                              
                                             </p>
                                         </div>
